force-app/main/default/objects/Closure_Makeup_Link__c/Closure_Makeup_Link__c.object-meta.xml
<CustomObject>
    <description>Junction between Closure_Event__c and Makeup_Day__c. One Saturday may satisfy multiple closure events. Lookups (not master-detail) with Restrict Delete so compliance records are never cascade-deleted.</description>
    <label>Closure Makeup Link</label>
    <nameField>
        <displayFormat>CML-{0000000}</displayFormat>
        <label>Closure Makeup Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closure Makeup Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>