force-app/main/default/objects/Closure_Makeup_Link__c/fields/Closure_Event__c.field-meta.xml
<CustomField>
    <fullName>Closure_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Closure Event</label>
    <referenceTo>Closure_Event__c</referenceTo>
    <relationshipLabel>Closure Makeup Links</relationshipLabel>
    <relationshipName>ClosureEvent</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>