force-app/main/default/objects/Closure_Makeup_Link__c/fields/Hours_Covered__c.field-meta.xml
<CustomField>
    <fullName>Hours_Covered__c</fullName>
    <description>How many missed hours this makeup day covers. Allows one Saturday to partially cover multiple half-day closures.</description>
    <label>Hours Covered</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>