force-app/main/default/objects/Closure_Makeup_Link__c/fields/Makeup_Day__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Day__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Makeup Day</label>
    <referenceTo>Makeup_Day__c</referenceTo>
    <relationshipLabel>Closure Makeup Links</relationshipLabel>
    <relationshipName>MakeupDay</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>